[gd_scene load_steps=14 format=3 uid="uid://dfah222300kmu"]

[ext_resource type="Script" path="res://Scenes/Rocket/rocket.gd" id="1_s1opv"]
[ext_resource type="Texture2D" uid="uid://5v6uf1iwddrx" path="res://Sprites/rocket.png" id="2_o1x6i"]
[ext_resource type="Texture2D" uid="uid://c5yo5bvwe61os" path="res://Sprites/Smoke/white.png" id="3_deead"]
[ext_resource type="Texture2D" uid="uid://xqi36utwnfux" path="res://Sprites/Light/circle.png" id="4_mfejr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3iqf"]
radius = 13.0
height = 126.0

[sub_resource type="Curve" id="Curve_7mnxc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.533333, 0.714286), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_8hsvm"]
curve = SubResource("Curve_7mnxc")

[sub_resource type="Gradient" id="Gradient_342ci"]
offsets = PackedFloat32Array(0, 0.467213, 0.819672, 1)
colors = PackedColorArray(0.949629, 0.744097, 0.155845, 1, 0.748391, 0.0846388, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ryh1a"]
gradient = SubResource("Gradient_342ci")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qgi3w"]
direction = Vector3(0, 0, 0)
spread = 25.0
initial_velocity_min = 200.0
initial_velocity_max = 300.0
gravity = Vector3(0, 98, 0)
scale_min = 0.2
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_ryh1a")
alpha_curve = SubResource("CurveTexture_8hsvm")

[sub_resource type="Animation" id="Animation_ike6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireParticles2D:amount_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_kr3ek"]
resource_name = "engine_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FireParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FireParticles2D:amount_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hkoyb"]
_data = {
"RESET": SubResource("Animation_ike6y"),
"engine_off": SubResource("Animation_kr3ek")
}

[node name="Rocket" type="RigidBody2D"]
collision_layer = 2
script = ExtResource("1_s1opv")

[node name="Rocket" type="Sprite2D" parent="."]
position = Vector2(0, -66)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_o1x6i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -63)
shape = SubResource("CapsuleShape2D_e3iqf")

[node name="FireParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 15)
amount = 500
process_material = SubResource("ParticleProcessMaterial_qgi3w")
texture = ExtResource("3_deead")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 15)
color = Color(0.94902, 0.745098, 0.156863, 1)
energy = 2.0
texture = ExtResource("4_mfejr")
texture_scale = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hkoyb")
}

[node name="AccelarationTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AntiTorqueTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="AccelarationTimer" to="." method="_on_accelaration_timer_timeout"]
[connection signal="timeout" from="AntiTorqueTimer" to="." method="_on_anti_torque_timer_timeout"]
